@@ -1,5 +1,11 @@
 2001-07-11  Hans Petter Jansson  <hpj@ximian.com>
 
+	* xml.pl.in (xst_xml_model_find): Implement.
+
+	* parse.pl.in (xst_parse_xml): Use xst_xml_model_find().
+
+2001-07-11  Hans Petter Jansson  <hpj@ximian.com>
+
 	This implements an exact internal representation of XML, which can
 	be scanned to and printed out from.
 
